documentaion for api is added and dockerfile is added
